# Abyss

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/actions/install-deps/: action.yml
.github/workflows/: ci.yml
scripts/: generate_summary.py  process_tests.py
src/: bepinex.rs  bepinex_handler.rs  bepinex_provider.rs  detector.rs  installer.rs  lib.rs  main.rs  provider.rs
tests/: bepinex_tests.rs  detector_tests.rs  installer_tests.rs  integration.rs
