[package]
name = "abyss"
version = "0.1.0"
edition = "2024"

[dependencies]
# Parsing CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# For file downloads (BepInEx, mods, etc.)
reqwest = { version = "0.12.23", features = ["json", "blocking"] }

# For unzip / archive handling
zip = "5.1.1"

# For file and directory management
tokio = { version = "1", features = ["full"] }