[package]
name = "abyss"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

reqwest = { version = "0.12.23", features = ["json", "blocking"] }
zip = "5.1.1"
tokio = { version = "1", features = ["full"] }

anyhow = "1"
directories = "6.0.0"
steamlocate = "2.0.1"

[dev-dependencies]
tempfile = "3"
tracing-test = "0.2"
